--- a/about-us.html
+++ b/about-us.html
@@ -120,7 +120,7 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                     <div class="col-md-6">
                         <div class="about_right_image">
                             <video width="420" height="240" controls>
-							<source src="https://youtu.be/mbiH2tOKqoc" type="video/mp4"/>
+							<source src="https://www.youtube.com/watch?v=mbiH2tOKqoc&feature=youtu.be" type="video/mp4"/>
 							</video>
                         </div>
                     </div>
@@ -134,7 +134,7 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                     <div class="col-md-6">
                         <div class="about_right_image">
                             <video width="420" height="240" controls>
-							<source src="https://youtu.be/YTBGqrafSZw" type="video/mp4"/>
+							<source src="ttps://www.youtube.com/watch?v=YTBGqrafSZw&feature=youtu.be" type="video/mp4"/>
 							</video>
                         </div>
                     </div>
