--- a/about-us.html
+++ b/about-us.html
@@ -112,7 +112,7 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                             <ul>
                                 <li><a href="https://www.rvaschools.net/FCES"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Elementary  School: Fairfield Elementary </a></li>
                                 <li><a href="https://www.rvaschools.net/MLKMS"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Middle School: MLK Middle School</a></li>
-                                <li><a href="https://www.firstlegoleague.org/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> FIRST Lego Robotics</a></li>
+                                <li><a href="http://www.firstlegoleague.org/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> FIRST Lego Robotics</a></li>
                                 <li><a href="https://www.rvaschools.net/RTC"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Richmond Technical Center </a></li>
                             </ul>
                         </div>
@@ -145,8 +145,8 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                             build a website as well as how not to build a website. That first Summer Break in college was when I started the Mayor's Youth Academy. I had figured that I could do the technology classes there to give me more credits towards my current courses. That was not how it went at all. The first computer class I took while in the MYA was at ECPI University with a teacher that I'll just call Mr. V. He was a straight forward guy who knew what he was talking about. He showed us how to build a website from scratch step by step. Going into the class I felt like I knew more than enough to make anything he could ask of us. Yeah, but I was wrong. At J. Sargeant Reynolds they show you how to do it with Dreamweaver. At ECPI you get Notepad++ and that made a big difference.
                             </p>
                             <ul>
-                                <li><a href="https://www.reynolds.edu/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> J. Sargeant Reynolds</a></li>
-                                <li><a href="https://www.richmondgov.com/MayorsYouthAcademy/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Mayors Youth Academy</a></li>
+                                <li><a href="http://www.reynolds.edu/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> J. Sargeant Reynolds</a></li>
+                                <li><a href="http://www.richmondgov.com/MayorsYouthAcademy/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Mayors Youth Academy</a></li>
                                 <li><a href="https://www.ecpi.edu/locations/richmond-va-innsbrook"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> ECPI University</a></li>
                                 <li><a href="https://notepad-plus-plus.org/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Notepad++</a></li>
                                 <li><a href="https://www.adobe.com/products/dreamweaver.html"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Dreamweaver</a></li>
