--- a/about-us.html
+++ b/about-us.html
@@ -119,9 +119,8 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                     </div>
                     <div class="col-md-6">
                         <div class="about_right_image">
-                            <video width="420" height="240" controls>
-							<source src="https://www.youtube.com/watch?v=mbiH2tOKqoc&feature=youtu.be" type="video/mp4"/>
-							</video>
+                           <iframe width="560" height="315" src="https://www.youtube.com/embed/mbiH2tOKqoc?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+			   </iframe>
                         </div>
                     </div>
                     <div class="col-md-12">
@@ -133,9 +132,8 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                 <div class="row about_inner_item">
                     <div class="col-md-6">
                         <div class="about_right_image">
-                            <video width="420" height="240" controls>
-							<source src="ttps://www.youtube.com/watch?v=YTBGqrafSZw&feature=youtu.be" type="video/mp4"/>
-							</video>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/YTBGqrafSZw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+			    </iframe>
                         </div>
                     </div>
                     <div class="col-md-6">
