--- a/about-us.html
+++ b/about-us.html
@@ -164,6 +164,12 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                             <p>So, as the heading says, I decided to leave JSR and go to ECPI for my search for knowledge. I spent the next 2 and a half years there. Along the way I got depresses and dropped out for some months. Cried because I screwed up my education one day and went back to do something about it the next. It took me a couple of months to get back where I needed to be, but I made it. I also learned to program as well as play with my programming skills. I did a lot of fun things there, but now I graduated, and I am not sure what happiness I will have next. I guess I will just have to make some new happiness for me. </p>
                         </div>
                     </div>
+		<div class="col-md-6">
+                        <div class="about_right_image">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/XVPfGrI222k?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+			    </iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
