testing the preloader

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,13 @@
     </head>
     <body>
  
-       
+               <div id="preloader">
+            <div class="loader absolute-center">
+                <div class="loader__box"><b class="top"></b></div>
+                <div class="loader__box"><b class="top"></b></div>
+                <div class="loader__box"><b class="top"></b></div>
+            </div>
+        </div>
         <!--================ Frist hader Area =================-->
         <div class="first_header">
             <div class="container">
