--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
     </head>
     <body>
        
-
+        <div id="preloader">
+            <div class="loader absolute-center">
+                <div class="loader__box"><b class="top"></b></div>
+                <div class="loader__box"><b class="top"></b></div>
+                <div class="loader__box"><b class="top"></b></div>
+            </div>
+        </div>
        
         <!--================ Frist hader Area =================-->
         <div class="first_header">
