--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                             <h3>Coding</h3>
                             <p>
 							I think it's very important that you stay in tune with your programming skills even after you have graduate.
-							So, I pay around and see what kinds of programming barriers I can reach and break.
+							So, I play around and see what kinds of programming barriers I can reach and break.
 							</p>
                             <a class="read_mor_btn" href="#samples">Check It Out</a>
                         </div>
@@ -356,7 +356,7 @@
                             <img src="img/drawing.png" alt="" height="150">
                             <h3>Improving My Drawing Skills</h3>
                             <p>
-                               Drawing give me a chance to express myself  in which ever format I please. I believe this 
+                               Drawing gives me a chance to express myself  in which ever format I please. I believe this 
                                adds some personal touches to my website.
                             </p>
                             <a class="read_mor_btn" href="#art">Check It Out</a>
@@ -367,7 +367,7 @@
                             <img src="img/magic.png" alt="" height="150">
                             <h3>Playing Magic the Gathering</h3>
                             <p>
-                                Magic is so fun is a way to relieve some stress. It also helps with planning out method of 
+                                Magic is very fun is a way to relieve some stress. It also helps with planning out method of 
                                 attack when building something new.
                             </p>
                             <a class="read_mor_btn" href="#">More Magic</a>
