--- a/menu-list.html
+++ b/menu-list.html
@@ -108,7 +108,7 @@
         </section>
         <div style="width: 80%; margin-left: 10%;">
             <p>Recent graduate with a degree in Software Development with a growing passion in building software. Experience working in group projects and completing tasks quickly and efficiently. You can also download the Word Document of my Resume
-			<a href="Documents/Thyraellis Howard Resume.docx">Here</a>
+			<a href="Documents/Thyraellis Howard Resume.pdf">Here</a>
 			</p>
         <hr/>
         </div>
