--- a/index.html
+++ b/index.html
@@ -490,8 +490,7 @@
                                 <div class="media-body">
                                     <a><h3>Presentation</h3></a>
                                     <h4>Good</h4>
-                                    <p>In order to be good at presenting I must have prepped and practice
-                                          My part to near memory. This way I will not break eye contact with the audience.
+                                    <p>In order to be good at presenting I must have prepped and practiced my part to near memory. This way I will not break eye contact with the audience.
                                     </p>
                                 </div>
                             </div>
@@ -517,7 +516,7 @@
                                 <div class="media-body">
                                     <a><h3>Writing Skills</h3></a>
                                     <h4>Good</h4>
-                                    <p>I am good at writing paper, but it generally takes a few drafts until I can get it nicely formatted. </p>
+                                    <p>I am good at writing papers, but it generally takes a few drafts until I can get it nicely formatted. </p>
                                 </div>
                             </div>
                         </div>
@@ -541,8 +540,8 @@
                                 <div class="media-body">
                                     <a><h3>Creativity</h3></a>
                                     <h4>Definitely</h4>
-                                    <p>I am creative in the since that I like to learn as much as I can about the item/topic
-                                        and then see what I change improve or just recreate it with something else.
+                                    <p>I am creative in the sence that I like to learn as much as I can about the item/topic
+                                        and then see what I change, improve, or just recreate it with something else.
                                     </p>
                                 </div>
                             </div>
@@ -580,7 +579,7 @@
                                 <div class="media-body">
                                     <a><h3>Desire to Learn</h3></a>
                                     <h4>Definitely</h4>
-                                    <p>Learning is very important to me. If I can improve in any way I am please.</p>
+                                    <p>Learning is very important to me. If I can improve in any way I am pleased.</p>
                                 </div>
                             </div>
                         </div>
@@ -592,8 +591,8 @@
                                 <div class="media-body">
                                     <a><h3>Logical Thinking</h3></a>
                                     <h4>Great</h4>
-                                    <p>I believe that everything follows an order of operation. One thing must happen to achieve the next.
-                                    Which is how I structure my programs.</p>
+                                    <p>I believe that everything follows an order of operation. One thing must happen to achieve the next,
+                                    which is how I structure my programs.</p>
                                 </div>
                             </div>
                         </div>
@@ -605,7 +604,7 @@
                                 <div class="media-body">
                                     <a><h3>Problem Solving</h3></a>
                                     <h4>Good</h4>
-                                    <p>I look at problems as a challenge of my skills. In the end I either learn something new or capable of proving my skills.
+                                    <p>I look at problems as a challenge of my skills. In the end I either learn something new or I am capable of proving my skills.
                                     </p>
                                 </div>
                             </div>
@@ -656,7 +655,7 @@
                                 <div class="media-body">
                                     <a><h3>Inspiring</h3></a>
                                     <h4>Great</h4>
-                                    <p>Inspiring people is finding an end that not only you want to achieve but other do too.
+                                    <p>Inspiring people is finding an end that not only you want to achieve but others do too.
                                     If you all want to see something work out rather than just getting paid, you will want to work harder to see it done.
                                     </p>
                                 </div>
@@ -1059,7 +1058,7 @@
                                 <div class="recent_blog_text_inner">
                                     <h6><a href="#">WordPress / HTML / CSS</a></h6>
                                     <a href="blog-details.html"><h5>WordPress Site Building</h5></a>
-                                    <p>This is a site that I build messing around with WordPress while trying to improve my WordPress skills. </p>
+                                    <p>This is a site that I build while improving my skills in WordPress.</p>
                                     <a>4/15/2018 <span>/ Thyraellis Howard</span></a>
                                 </div>
                             </div>
