Beefed Up content
I adjusted the information on the coding skill cards.

--- a/menu-list.html
+++ b/menu-list.html
@@ -137,7 +137,7 @@
                                 <div class="media-body">
                                     <a><h3>HTML</h3></a>
                                     <h4>Great</h4>
-                                    <p>HTML is easy for me to read and I have a very good understanding of its structure and how to implement. </p>
+                                    <p>In HTML I have coded out many structures for website that I have built with ASP.NET C#, PHP, JavaScript.</p>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                                 <div class="media-body">
                                     <a><h3>CSS</h3></a>
                                     <h4>Great</h4>
-                                    <p>I love CSS, it is cool to see how you can change and customize plain html elements. It allows me to get creative with what I love to do. </p>
+                                    <p>I mainly use CSS for my styling needs on websites.</p>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                                 <div class="media-body">
                                     <a><h3>JavaScript</h3></a>
                                     <h4>Good</h4>
-                                    <p>JavaScript is a fun starter language. I played around with in my courses and also attempted to make a chat bot with it. </p>
+                                    <p>JavaScript is the first language that I made an AI in. As well as other functionalities on website.</p>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                 <div class="media-body">
                                     <a><h3>Knockout JS</h3></a>
                                     <h4>Ok</h4>
-                                    <p>I was introduced to knockout while interning at Think of Us as a language that made databinding easier. </p>
+                                    <p>During my internship at Think of Us I used knockout to do most of the databinding for their platform.</p>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                 <div class="media-body">
                                     <a><h3>C</h3></a>
                                     <h4>Okay</h4>
-                                    <p>Other than the basics of it I have not seen or done anything beyond that. </p>
+                                    <p>I C I have made a few cmd line games. THe first one was a randome number guessing game.</p>
                                 </div>
                             </div>
                         </div>
@@ -207,9 +207,10 @@
                                     <img src="img/back-end.png" height="140" alt="">
                                 </div>
                                 <div class="media-body">
-                                    <a><h3>.NET</h3></a>
+                                    <a><h3>.NET C#</h3></a>
                                     <h4>Amazing</h4>
-                                    <p>I love .NET it allows me to connect my front-end CSS with my back-end C#. What more could I want. </p>
+                                    <p>In .net C# I have built games, websites, and AI's. In this language I also built Elias AMIS (Active Memory Information System)
+					my personal take on AI processing and user interaction.</p>
                                 </div>
                             </div>
                         </div>
@@ -221,19 +222,7 @@
                                 <div class="media-body">
                                     <a><h3>C++</h3></a>
                                     <h4>Good</h4>
-                                    <p>I have played with it to the point of making a word adventure game but it did not seem to be as adjustable as I hoped it would be. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 back edit">
-                            <div class="media">
-                                <div class="media-left">
-                                    <img src="img/back-end.png" height="140" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <a><h3>C#</h3></a>
-                                    <h4>Definitly</h4>
-                                    <p>I love C#. I just love the functionality, the organized structure, and the connectivity.  I feel like I could make process come to life with C#. </p>
+                                    <p>In C++ I have made a game that presents you with a quest using random generated numbers.</p>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +234,7 @@
                                 <div class="media-body">
                                     <a><h3>PHP</h3></a>
                                     <h4>Okay</h4>
-                                    <p>I have a base understanding of it, but I have yet to see a wow factor that would make me want to play with it.</p>
+                                    <p>In PHP I have made a Zodiac Calculator website that also shows you Zodiac information and years /w signs.</p>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +246,7 @@
                                 <div class="media-body">
                                     <a><h3>Java</h3></a>
                                     <h4>Pretty Good</h4>
-                                    <p>I have not really played with it outside of school work. I am capable of mimicking processes and adjusting them as I need. </p>
+                                    <p>In JAVA I have made a standard calculator, shape resizer, and serveral Android apps.</p>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +258,7 @@
                                 <div class="media-body">
                                     <a><h3>Express.js</h3></a>
                                     <h4>Okay</h4>
-                                    <p>I have not played with this beyond class work, so I do not have a good grasp of the basics yet. There is always room for improvement. </p>
+                                    <p>I have used Express.js to connect my Angular projects to my Node.js and MongoDB.</p>
                                 </div>
                             </div>
                         </div>
@@ -281,7 +270,7 @@
                                 <div class="media-body">
                                     <a href="#"><h3>Node JS</h3></a>
                                     <h4>Good</h4>
-                                    <p>I understand the basics and the integration of files for this, but I feel like there is more to it than file integration. </p>
+                                    <p>I use Node.JS to intergrate data, as well as push data into my MongoDB.</p>
                                 </div>
                             </div>
                         </div>
@@ -293,7 +282,7 @@
                                 <div class="media-body">
                                     <a href="#"><h3>SQL (Oracle)</h3></a>
                                     <h4>Good</h4>
-                                    <p>I can query a database using Oracle. I only had to use it in one class though it is not my top SQL format/system. </p>
+                                    <p>I have queried a database using Oracle for a class, but not for personal database quering.</p>
                                 </div>
                             </div>
                         </div>
@@ -305,7 +294,7 @@
                                 <div class="media-body">
                                     <a href="#"><h3>SQL (MySQL)</h3></a>
                                     <h4>Great</h4>
-                                    <p>I do most of my database queries in this format. I will admit that I still have not fully got making functions and procedures down packed yet.</p>
+                                    <p>I use MySQL to pull and push data between my applications. It is currently my main database language.</p>
                                 </div>
                             </div>
                         </div>
