--- a/about-us.html
+++ b/about-us.html
@@ -169,7 +169,7 @@ My want to be a developer came from me spending hours of looking at my mom edit 
        
         <!--================ Frist hader Area =================-->
         <div class="first_header">
-            <div c
+            <div>
 		<div class="col-md-6">
                         <div class="about_right_image">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/XVPfGrI222k?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
