--- a/about-us.html
+++ b/about-us.html
@@ -166,7 +166,7 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                 <div class="loader__box"><b class="top"></b></div>
             </div>
         </div>
-       
+       </div>
         <!--================ Frist hader Area =================-->
 
         <!--================End About Us Content Area =================-->
