--- a/about-us.html
+++ b/about-us.html
@@ -167,6 +167,7 @@ My want to be a developer came from me spending hours of looking at my mom edit 
             </div>
         </div>
        </div>
+		    </div>
         <!--================ Frist hader Area =================-->
 
         <!--================End About Us Content Area =================-->
