--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="vendors/linears-icon/style.css" rel="stylesheet">
         <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">lass="container">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="header_contact_details">
