--- a/about-us.html
+++ b/about-us.html
@@ -104,7 +104,8 @@
         <!--================About Us Content Area =================-->
         <section class="about_us_content">
             <div class="container">
-			<h4 style="font-family: 'Cantata One', serif;font-size: 24px; margin-bottom:10px;">About My Skills</h4>
+					<img src="img/Profile_Picture.jpg" height="130px" style="border-radius:80px;"/>
+		    <h4 style="font-family: 'Cantata One', serif;font-size: 24px; margin-bottom:10px;">About My Skills</h4>
                             <p>
 Hi, my name is Thyraellis Howard I am the creator of Software Cake Resume Demo. I am a Software Developer with a bachelor’s in software development as of 02-22-18. I take joy in creating and learning new things on a day to day basis. As far as what type of developer I am, I would consider myself a full stack Developer with a love for CSS and C#.  They say that if someone is a Jack of All Traits they are not a master of one, but I would beg to differ. </p><br/>
 <br/>
