--- a/about-us.html
+++ b/about-us.html
@@ -109,11 +109,11 @@
                             <p>
 Hi, my name is Thyraellis Howard I am the creator of Software Cake Resume Demo. I am a Software Developer with a bachelor’s in software development as of 02-22-18. I take joy in creating and learning new things on a day to day basis. As far as what type of developer I am, I would consider myself a full stack Developer with a love for CSS and C#.  They say that if someone is a Jack of All Traits they are not a master of one, but I would beg to differ. </p><br/>
 <br/>
-                <div class="row about_inner_item">
+             <!--   <div class="row about_inner_item">
                     <div class="col-md-6">
                         <div class="about_left_content">
                            
-                            <h4>Where it All Started</h4>
+                           <h4>Where it All Started</h4>
 <p>
 My want to be a developer came from me spending hours of looking at my mom edit music and playing video games on her laptop.  So, I took that want to learn more about computers and technology and signed up for the robotics team in Elementary School. I continued with the FIRST Robotics program in Middle School. I also took up a class where you put together computers but mine never had sound. In High School I took up Electronics part 1 and 2 at the Richmond Technical Center. There I got to experience the hardware and how it works. I really enjoyed making the Oscilloscope break from messing with the frequencies. The I graduate from High School and with no time to waste I started college. </p>
                             <ul>
@@ -175,7 +175,7 @@ My want to be a developer came from me spending hours of looking at my mom edit 
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--================End About Us Content Area =================-->
         
         <!--================End Recent Blog Area =================-->
