--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <![endif]-->
     </head>
     <body>
-       
+	    <h1>Under Construction</h1>
+	    <h3>Please forgive the developer, she is trying to improve the site to beter reperesent her experience.<br/> Thank you</h3>
+       <!--
         <div id="preloader">
             <div class="loader absolute-center">
                 <div class="loader__box"><b class="top"></b></div>
@@ -1067,7 +1069,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <!--================End Recent Blog Area =================-->
         
         <!--================End Recent Blog Area =================-->
