--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </head>
     <body>
 	    <h1>Under Construction</h1>
-	    <h3>Please forgive the developer, she is trying to improve the site to beter reperesent her experience.<br/> Thank you</h3>
+	    <h3>Please forgive the developer, she is trying to improve the site to better reperesent her experience and skills.<br/> Thank you</h3>
        <!--
         <div id="preloader">
             <div class="loader absolute-center">
